# fastapi-learning

./: README.md  pyproject.toml
packt_dsfAPI/assets/: superman.avif
packt_dsfAPI/chapter_3/: basics_fastapi.py  customize_response.py  first_endpoint_01.py
packt_dsfAPI/chapter_4/: convert_object.py  custom_validation.py  email_validation.py  factory_default.py  field_validation.py  instance_object.py  model_inheritance.py  standard_filed.py
packt_dsfAPI/chapter_5/: function_dependency.py  path_dependency.py
packt_dsfAPI/chapter_6/b_sqlalchemy/: alembic.ini  app.py  chapter_6_b_sqlalchemy.db  database.py  models.py  schemas.py
packt_dsfAPI/chapter_6/mongodb/: app.py  database.py  models.py
packt_dsfAPI/chapter_6/sqlalchemy/: schemas.py
packt_dsfAPI/chapter_7/authentication/: app.py  authentication.py  database.py  models.py  password.py  schemas.py
packt_dsfAPI/chapter_7/cors/: app_with_cors.py  app_without_cors.py
packt_dsfAPI/chapter_7/csrf/: app.py  database.py  index.html  models.py  password.py  schemas.py
packt_dsfAPI/type_hints/: type_hints_01.py  type_hints_02.py  type_hints_03.py  type_hints_04.py
packt_webAPI/mongodb_planner/: main.py
packt_webAPI/mongodb_planner/auth/: authenticate.py  hash_password.py  jwt_handler.py
packt_webAPI/mongodb_planner/database/: connection.py
packt_webAPI/mongodb_planner/models/: events.py  users.py
packt_webAPI/planner/: main.py  planner.db
packt_webAPI/static/: style.css
packt_webAPI/templates/: home.html  todo.html  todo_details.html
packt_webAPI/todos/: api.py  model.py  todo.py
(+11 files in other folders)
