[project]
name = "fastapi-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite==0.21.0",
    "alembic==1.16.5",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==25.1.0",
    "bcrypt==4.3.0",
    "beanie==2.0.0",
    "email-validator==2.2.0",
    "fastapi==0.116.1",
    "httpx==0.28.1",
    "jinja2==3.1.6",
    "motor==3.7.1",
    "mypy==1.17.1",
    "passlib==1.7.4",
    "pymongo==4.14.0",
    "pytest==8.4.1",
    "pytest-asyncio==1.1.0",
    "python-dotenv==1.1.1",
    "python-jose==3.5.0",
    "python-multipart==0.0.20",
    "sqlalchemy==2.0.43",
    "sqlmodel==0.0.24",
    "starlette==0.47.2",
    "starlette-csrf==3.0.0",
    "uvicorn==0.35.0",
]
